examples/invalid/display.sv
module display;

initial $display("%b", $time);

endmodule
